--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           <div class="container-fluid">
             <div class="row">
               <div style="margin-bottom: 20px;" class="col-md-12">
-                <div class="card" style="width: 25rem;">
+                <div class="card" style="width: 20rem;">
                   <img src="/assets/images/JALE VASUDEVA REDDY_page-0001 (1).jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Java Full Stack Web Development</h5>
@@ -563,6 +563,17 @@
             </div>
           </div>
         </section>
+        <footer class="footer">
+            <div class="footer-section">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="copyright-text">&copy; All Rights Reserved </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </footer>
       </div>
     </div>
   </div>
